<resources>
    <string name="app_name" translatable="false">ShareView</string>
    <string name="action_settings">Settings</string>
    <string name="resetBoard">Reset the board</string>
    <string name="leaveBoard">Leave the board</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="previous">See previous states</string>

    <string name="title">Title</string>

    <!-- Home strings -->
    <string name="newBoard">Create New Board</string>
    <string name="joinBoard">Join existing Board</string>
    <string name="pseudo" translatable="false">Pseudo</string>

    <string name="back">Back</string>


    <string name="ipaddress">Server IP address: </string>
    <string name="port">Port: </string>
    <string name="credits" translatable="false">©Tchakmakdjian Kévin, Mignon Frédéric, Gerber Xavier, ESIPE</string>

    <!-- Option strings -->
    <string name="text">Text: </string>
    <string name="textSize">Text Size: </string>
    <string name="strokeSize">Stroke Size: </string>
    <string name="color">Color:</string>
    <string name="enablePrevious">Enable previous view: </string>
    <string name="borderColor">Border color: </string>
    <string name="borderSize">Border size: </string>


    <!--Option toolbar-->
    <string name="toolbarOption" translatable="false">OPTIONS</string>
    <string name="toolbarBoard" translatable="false">BOARD</string>
    <string name="toolbarChat" translatable="false">CHAT</string>
    <string name="toolbarUsers" translatable="false">USERS</string>


    <!--Userlist fragment-->
    <string name="userList">User List</string>



    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="defaulttext">Enter your text here</string>

</resources>
