<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSize"
        android:id="@+id/textSizetxt"
      />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSizeBar"
        android:max="100"
        android:progress="15"
        android:indeterminate="false" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strokeSize"
        android:id="@+id/strokeSize"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strokeSizeBar"
        android:max="100"
        android:progress="15"
        android:indeterminate="false" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/colortxt"
        android:text="@string/color"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/palette"
        >
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/blue"
            android:background="@drawable/bleu"
            android:clickable="true"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/rouge"
            android:background="@drawable/rouge"
            android:clickable="true"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/vert"
            android:background="@drawable/vert"
            android:clickable="true"/>

        <ImageButton
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:id="@+id/noir"
        android:background="@drawable/noir"
        android:clickable="true"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/blanc"
            android:background="@drawable/blanc"
            android:clickable="true"/>

    </LinearLayout>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enablePrevious"
        android:id="@+id/enablePrevious"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:paddingTop="30dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/previousBar"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borderSize" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/borderBar"
        android:indeterminate="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borderColor" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/borderBlue"
            android:background="@drawable/bleu"
            android:clickable="true"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/borderRed"
            android:background="@drawable/rouge"
            android:clickable="true"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/borderGreen"
            android:background="@drawable/vert"
            android:clickable="true"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/borderBlack"
            android:background="@drawable/noir"
            android:clickable="true"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:id="@+id/borderWhite"
            android:background="@drawable/blanc"
            android:clickable="true"/>

    </LinearLayout>


</LinearLayout>
